\name{ERSSA NEWS}
\title{ERSSA NEWS}
\alias{ERSSA NEWS}
\encoding{UTF-8}


\section{Version 0.99.0}{\itemize{
\item
Codes ready for bioconductor submission
\item
Added full example dataset
\item
Cleanup the outputs to be more descriptive and append ERSSA_ to all files
\item
Write vignette

}}
