@@ -122,6 +122,7 @@ Finally, we need to specify which condition is the control condition to be used 
 With the count and condition tables prepared, we can now call `erssa` to start the sample size analysis:
 
 ```{r, eval=FALSE}
+set.seed(1) # for reproducible sample combination generation
 ssa = erssa(count_table.full, condition_table.full, DE_ctrl_cond='heart')
 ```
 
@@ -154,7 +155,7 @@ Next, ERSSA runs `comb_gen` function to randomly generate the sample combination
 
 For a majority of datasets we have tested, 30 combinations are typically sufficient to visualize the trend in the DE gene discovery. However, we also noticed that for certain datasets with particuarly high biological variance, ERSSA benefits from running additional combinations at the expense of longer runtime. The number of combinations per replicate level can be set with the `comb_gen_repeat` argument.
 
-Since a random process is used to generate the combinations, each individual `erssa` run will generate an unique set of sample combinations as long as all of the unique combinations have not been exhausted as set by the `comb_gen_repeat` argument. However, a random seed can be fixed for reproducible results by setting the `comb_gen_seed` argument to a number. For example, We can reproduce the number of DE genes plot in section 3.1 using `comb_gen_seed=1`. Additionally, it is worth noting that we found it useful to run several random seeds to confirm the overall conclusions are consistent across individual runs.
+Since a random process is used to generate the combinations, each individual `erssa` run will generate an unique set of sample combinations as long as all of the unique combinations have not been exhausted as set by the `comb_gen_repeat` argument. However, reproducible results can be achieved by setting the random seed through `set.seed(seed)` before running `erssa`. For example, we can reproduce the plot in section 3.1 using `set.seed(1)`. Additionally, we found it useful to run several random seeds to confirm the overall conclusions are consistent across individual runs.
 
 ### Start DE analysis
 
@@ -189,7 +190,7 @@ The third plot shows the number of DEGs that have been identified in all of the 
 knitr::include_graphics("Figures/GTEx/ERSSA_plot_3_IntersectDEGenes.png")
 ```
 
-The last plot helps to visualize the True Positive Rate (TPR) and False Positive Rate (FPR) associated with each comparison. Here, we set the list of DEGs found using the full dataset as the ground truth. Not suprisingly, we see improved TPR as more replicates are used and a general decrease in FPR. To summarize the rates, we also, by default, plot the mean TPR and FPR at each replicate level in black-bordered dimonds. Alternatively, the median can be plotted by setting `TPR_FPR_stat='median'`. Similar to the third plot, the TPR-FPR plot helps the user understand the variability among the comparisons. For this particular dataset, we see TPR improved substantially with at least 5 replicates while the improvement past 7 replicates become increasingly marginal. Plot generated by calling the `ggplot2_TPR_FPRPlot` function. 
+The last plot helps to visualize the True Positive Rate (TPR) and False Positive Rate (FPR) associated with each comparison. Here, we set the list of DEGs found using the full dataset as the ground truth. Not suprisingly, we see improved TPR as more replicates are used and a general decrease in FPR. To summarize the rates, we also, by default, plot the mean TPR and FPR at each replicate level in black-bordered dimonds. Alternatively, the median can be plotted by setting `TPR_FPR_stat='median'`. Similar to the third plot, the TPR-FPR plot helps the user understand the variability among the comparisons. For this particular dataset, we see TPR improved substantially with at least 5 replicates while the improvement past 7 replicates become increasingly marginal. The trend in FPR is also very interesting, as we see initial improvement in TPR is paired with higher FPR. Generally, high TPR and low FPR are favorable. Plot generated by calling the `ggplot2_TPR_FPRPlot` function. 
 
 ```{r, out.width = "500px", echo=FALSE, fig.align = "center"}
 knitr::include_graphics("Figures/GTEx/ERSSA_plot_4_FPRvTPRPlot.png")
@@ -198,6 +199,8 @@ knitr::include_graphics("Figures/GTEx/ERSSA_plot_4_FPRvTPRPlot.png")
 All four of the plots above are generated by ERSSA using the ggplot2 package [13] with the ggplot2 objects as well as the plotted data saved to disk. From there, the user can easily replace commands or add new ones to customarize the plots to fit their preference. Additionally, the raw data generated during the calcuations can be used if the user wishes to generated additional plots not included in the ERSSA package. The following codes serve as a demonstration of the customerization capability based on ggplot2.
 
 ```{r, eval=FALSE}
+set.seed(1) # for reproducible sample combination generation
+
 # Run erssa with example dataset.
 # ssa object now contains all of the generated data and the ggplot2 objects
 ssa = erssa(count_table.full, condition_table.full, DE_ctrl_cond='heart')
@@ -223,6 +226,8 @@ knitr::include_graphics("Figures/GTEx/ERSSA_plot_1_NumOfDEGenes_lowRes.png")
 As part of the International HapMap Project, RNA-seq was performed on lymphoblastoid cell lines derived from 60 European and 69 Nigerian individuals [10-11]. Here, we manually downloaded preprocessed count and condition tables from the original [ReCount project](http://bowtie-bio.sourceforge.net/recount/) to serve as inputs for ERSSA. In this case, running ERSSA on the entire dataset is quite time consuming as well as unnecessary, so 25 replicates from each condition are selected for ERSSA analysis.
 
 ```{r, eval=FALSE}
+set.seed(1) # for reproducible sample combination generation
+
 # Load count data, select 25 samples from each condition
 # Montgomery (European) vs. Pickrell (Nigerian)
 condition_table = read.csv('montpick_phenodata.txt', sep=' ')
@@ -236,8 +241,7 @@ count_table = count_table[, as.character(condition_table$sample)]
 
 # analyze the 25 replicate dataset with 50 combinations per replicate
 ssa = erssa(count_table = count_table, condition_table = condition_table,
-            DE_ctrl_cond = 'Nigerian', comb_gen_seed = 1,
-            , num_workers = 8, comb_gen_repeat = 50)
+            DE_ctrl_cond = 'Nigerian', num_workers = 8, comb_gen_repeat = 50)
 ```
 
 ```{r, out.width = "500px", echo=FALSE, fig.align = "center"}
@@ -254,6 +258,8 @@ Compare to the previous GTEx dataset, the HapMap dataset's DEG discovery increas
 In this study, Fossum and coworkers were interested in studying EHF's effect on the transcriptome as a transcriptional regulator [12]. As part of the study, EHF expression was depleted using siRNA and compared to negative control siRNA samples. For both conditions, 5 cell culture replicates were used (compare to the GTEx and HapMap datasets, 5 replicates is more representative of the typical number of replicates used in most RNA-seq studies). Here, we obtained count and condition tables from [recount2 website](https://jhubiostatistics.shinyapps.io/recount/) to serve as input for ERSSA. We load the data and run ERSSA using:
 
 ```{r, eval=FALSE}
+set.seed(1) # for reproducible sample combination generation
+
 # Study-specific condition table downloaded from recount2 website
 # load condition_table, keep only Control and EHF_siRNA samples
 condition_table = read.csv('SRP049988.tsv', sep='\t')
@@ -270,8 +276,8 @@ count_table = as.data.frame(counts[,as.character(condition_table$run)])
 
 # Start ERSSA
 ssa = erssa(count_table = count_table, condition_table = condition_table,
-            DE_ctrl_cond = 'Control', comb_gen_seed = 1,
-            , num_workers = 8, DE_cutoff_Abs_logFC = 0.5)
+            DE_ctrl_cond = 'Control',
+            num_workers = 8, DE_cutoff_Abs_logFC = 0.5)
 ```
 
 ```{r, out.width = "500px", echo=FALSE, fig.align = "center"}
