@@ -3,6 +3,11 @@
 \alias{ERSSA NEWS}
 \encoding{UTF-8}
 
+\section{Version 0.99.2}{\itemize{
+\item
+Remove set.seed from package code
+}}
+
 
 \section{Version 0.99.0}{\itemize{
 \item
